# UAIC_FII_NIM

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: codeql-analysis.yml
HW1/: CMakeLists.txt  Makefile  Readme.txt
HW1/ga/: Cec22.cpp  Cec22.h  Cec22Impl.cpp  Constants.h  Constexpr.h  FunctionManager.cpp  FunctionManager.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  agregate_experiments.py  main.cpp
HW1/src/: CMakeLists.txt  helloworld.cpp  main.cpp
HW2/: CEC2022.py  Makefile  README.txt  checkfiles.py  experiment.txt  runner.py  runner2.py
HW2/experiments/: 1-0.txt  1-1.txt  1-10.txt  1-100.txt  1-101.txt  1-102.txt  1-103.txt  1-104.txt  1-105.txt  1-106.txt  1-107.txt  1-108.txt  1-109.txt  1-11.txt  1-110.txt  1-111.txt  1-112.txt  1-113.txt  1-114.txt  1-115.txt  1-116.txt  1-117.txt  1-118.txt  1-119.txt  1-12.txt  1-120.txt  1-121.txt  1-122.txt  1-123.txt  1-124.txt  1-125.txt  1-126.txt  1-127.txt  1-128.txt  1-129.txt  1-13.txt  1-130.txt  1-131.txt  1-132.txt  1-133.txt  (+1927 more)
HW2/pso/: main.cpp
HW2/pso/cec22/: Cec22.cpp  Cec22.h
HW2/pso/functions/: CacheLayer.h  FunctionManager.cpp  FunctionManager.h
HW2/pso/pso/: PSO.cpp  PSO.h
HW2/pso/swarm/: Swarm.cpp  Swarm.h
HW2/pso/utils/: Constants.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
